# protoC

./: .gitignore  CMakeLists.txt  TODO.txt  platformio.ini  readme.md  sdkconfig  sdkconfig.ci  sdkconfig.esp32dev  sdkconfig.old
components/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h
components/bmp280_loop/: CMakeLists.txt  bmp280_ctrl_loop.c  bmp280_ctrl_loop.h
components/heater_ctrl/: CMakeLists.txt  heater_ctrl.c  heater_ctrl.h
components/i2cdev/: CMakeLists.txt  i2cdev.c
components/mod_bmp280/: CMakeLists.txt  mod_bmp280.c  mod_bmp280.h
components/mod_gpio/: CMakeLists.txt  mod_gpio.c  mod_gpio.h
components/mod_heater/: CMakeLists.txt  mod_heater.c  mod_heater.h
components/mod_mqtt/: CMakeLists.txt  Kconfig.projbuild  mod_mqtt.c  mod_mqtt.h  mqtt_client.c
components/sensor/: CMakeLists.txt  gpio_objects.h.kk  sensor.h
components/sntp2/: CMakeLists.txt  sntp2.c  sntp2.h  sntp_opts2.h
components/task_programmer01/: CMakeLists.txt  task_programmer01.c  task_programmer01.h
components/wifi01/: CMakeLists.txt  wifi01.c  wifi01.h
src/: CMakeLists.txt  main.c  sdkconfig.h
